fix: broken layout on mobile due to tooltips (closes #1559)

--- a/resources/assets/sass/partials/_tooltip.scss
+++ b/resources/assets/sass/partials/_tooltip.scss
@@ -25,5 +25,13 @@
     height: 8px;
     transform: rotate(45deg);
   }
+
+  @media (hover: none) {
+    display: none !important;
+  }
+
+  @media screen and (max-width: 768px) {
+    display: none !important;
+  }
 }
 
